--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # Configure properties of data base
-spring.datasource.url= jdbc:sqlserver://10.125.13.15;databaseName=ANDSYS_VIG
-spring.datasource.username= Pharitech
-spring.datasource.password= Ph4r1t3ch*
+spring.datasource.url= jdbc:sqlserver://10.125.18.17;databaseName=FTPASTARA
+spring.datasource.username= talend
+spring.datasource.password= Tx#n7hbu
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.sql-script-encoding=UTF-8
