--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-
 # Configure properties of data base
 spring.datasource.url= jdbc:sqlserver://10.125.18.17;databaseName=FTPASTARA
-spring.datasource.username= talend
-spring.datasource.password= Tx#n7hbu
+spring.datasource.username= rmonsalve
+spring.datasource.password= Vigia2023*
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto= update
 spring.datasource.sql-script-encoding=UTF-8
