--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<scope>runtime</scope>
+			<version>9.2.1.jre8</version>
+
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
